--- a/minecraft/config/ExtraPlanets.cfg
+++ b/minecraft/config/ExtraPlanets.cfg
@@ -38,7 +38,7 @@ biomeid {
     I:"Jupiter Biome ID"=150
 
     # [range: 0 ~ 255, default: 196]
-    I:"Jupiter Sands Biome ID"=196
+    I:"Jupiter Sands ID"=196
 
     # [range: 0 ~ 255, default: 189]
     I:"Jupiter Sea Biome ID"=189
@@ -48,9 +48,6 @@ biomeid {
 
     # [range: 0 ~ 255, default: 177]
     I:"Kepler22b Blue Red Forest Biome ID"=177
-
-    # [range: 0 ~ 255, default: 197]
-    I:"Kepler22b Candy Land Biome ID"=197
 
     # [range: 0 ~ 255, default: 174]
     I:"Kepler22b Plains Biome ID"=174
@@ -73,12 +70,6 @@ biomeid {
     # [range: 0 ~ 255, default: 153]
     I:"Neptune Biome ID"=153
 
-    # [range: 0 ~ 255, default: 200]
-    I:"Neptune Layered Hills Biome ID"=200
-
-    # [range: 0 ~ 255, default: 199]
-    I:"Neptune Radio Active Water Sea Biome ID"=199
-
     # [range: 0 ~ 255, default: 179]
     I:"Oberon Biome ID"=179
 
@@ -100,17 +91,8 @@ biomeid {
     # [range: 0 ~ 255, default: 147]
     I:"Saturn Biome ID"=147
 
-    # [range: 0 ~ 255, default: 198]
-    I:"Saturn HydroCarbon Sea Biome ID"=198
-
-    # [range: 0 ~ 255, default: 201]
-    I:"Saturn Nuclear Land Biome ID"=201
-
     # [range: 0 ~ 255, default: 173]
     I:"Titan Biome ID"=173
-
-    # [range: 0 ~ 255, default: 202]
-    I:"Titan Methane Hills Biome ID"=202
 
     # [range: 0 ~ 255, default: 186]
     I:"Titan Sea Biome ID"=186
@@ -455,9 +437,6 @@ dimensionid {
 
     # Setting this option to false will completely remove Lead Ore from the world
     B:"Enable generation of Lead Ore in the Overworld"=true
-
-    # Setting this option to false make it use the Galacticraft Galaxy Map/Celestaial Selection Screen
-    B:"Use Custom Galaxy Map/Celestaial Selection Screen"=true
 }
 
 
