--- a/minecraft/config/waila/waila.cfg
+++ b/minecraft/config/waila/waila.cfg
@@ -46,8 +46,10 @@ modules {
     B:general.showcrop=true
     B:general.showents=true
     B:general.showhp=true
+    B:vanilla.alternatecropitem=true
     B:vanilla.comparator=true
     B:vanilla.furnacedisplay=true
+    B:vanilla.horseinventory=true
     B:vanilla.jukebox=true
     B:vanilla.leverstate=true
     B:vanilla.redstone=true
@@ -70,8 +72,10 @@ server_forcing {
     B:general.showcrop=false
     B:general.showents=false
     B:general.showhp=false
+    B:vanilla.alternatecropitem=false
     B:vanilla.comparator=false
     B:vanilla.furnacedisplay=false
+    B:vanilla.horseinventory=false
     B:vanilla.jukebox=false
     B:vanilla.leverstate=false
     B:vanilla.redstone=false
